<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/dana_rv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:strokeColor="@color/bibit"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvKeterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dana_goals"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvKeterangan" />
        <TextView
            android:id="@+id/tvGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dana_goals"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvDanaMonth"
            app:layout_constraintTop_toTopOf="@id/goals"/>

        <TextView
            android:id="@+id/danaMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MonthlyIncome"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goals" />
        <TextView
            android:id="@+id/tvDanaMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MonthlyIncome"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/danaMonth"
            app:layout_constraintTop_toBottomOf="@id/tvGoals" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEdit"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>